@@ -1,3 +1,5 @@
-EBUILD axkb-9999.ebuild 486 RMD160 d31020d2356eb144e49e960f827a20cbe07b6197 SHA1 e4238c9f3e6738fafaa21747fd31245d38a45d05 SHA256 d3565170b9e0b2df0b881d10c64afb8e2c0ab4d69607a94f331be151d48115f5
+DIST axkb-0.4.2.tar.gz 175111 RMD160 640b3a0a2dfafd343baaa36eca2379d98ddc39bd SHA1 5437f2f5efa16bdbfec89bbea76a5207aa403756 SHA256 18d1a8c68a58d5842d771f8f6066723c25c3f24babb67b76f0bf586a8615bcf2
+EBUILD axkb-0.4.2.ebuild 935 RMD160 7a700e76c7abace37a21d5522eaa4e66a7eeb36f SHA1 8b717c1ae8b2fecb1980e5c4e8f7017a18bfff02 SHA256 c0060472a355e4e8568515a3bb495300c0f2a7bafcbb82e347c83fd517b2e546
+EBUILD axkb-9999.ebuild 915 RMD160 453cdb5ba2bbfb03ff76106b8d57752af7a33763 SHA1 d267d5c1b6d2a9c7129d2b00d83ff371b283b73c SHA256 695ef3a60f179ef176ccb76abf328dd2351df3e2726fe209446e43a0d147f00c
 MISC ChangeLog 437 RMD160 691f244b890a7fc2c00885d0e52abb603ab91312 SHA1 14c733cdd2ed76ac1fc312d53259dd3d3683a516 SHA256 482038bbb713c390fa88e8c19ab9f4bfb12a8d789d538e34142471e06dbefa7f
 MISC metadata.xml 155 RMD160 654eebe07944b4d18c58e4a54c50758eceead53e SHA1 967490b59f5185a6849cb5583390dd0d0b0dd512 SHA256 94ed5876ef16dbc191744ff6b8939a0f428fcb8add316d898880e1c4c880b9e7
